--- a/notebooks/data_reader.ipynb
+++ b/notebooks/data_reader.ipynb
@@ -78198,6 +78198,345 @@
     "        for event_type in sorted(unique_event_types):\n",
     "            print(f\"- {event_type}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processed 100,000 rows...\n",
+      "Processed 200,000 rows...\n",
+      "Processed 300,000 rows...\n",
+      "Processed 400,000 rows...\n",
+      "Processed 500,000 rows...\n",
+      "Processed 600,000 rows...\n",
+      "Processed 700,000 rows...\n",
+      "Processed 800,000 rows...\n",
+      "Error occurred: {'code': '57014', 'details': None, 'hint': None, 'message': 'canceling statement due to statement timeout'}\n",
+      "\n",
+      "Partial results before error:\n",
+      "Processed at least 800,000 rows\n",
+      "Found 115 unique event types so far:\n",
+      "- ::configurable-table:render\n",
+      "- ::nav-header:action-center-click\n",
+      "- :all-accounts::view\n",
+      "- :all-accounts:all-policies-table:policy-click\n",
+      "- :all-accounts:configurable-table:render\n",
+      "- :all-accounts:layout:render\n",
+      "- :all-accounts:widget:render\n",
+      "- EMPTY\n",
+      "- account-auto-rating:::view\n",
+      "- account-auto-rating::configurable-table:render\n",
+      "- account-general-liability-rating:::view\n",
+      "- account-level-duns-info-accordion-selected\n",
+      "- account-lines:::action-click\n",
+      "- account-lines:::change-rating-click\n",
+      "- account-lines:::create-document-click\n",
+      "- account-lines:::view\n",
+      "- account-lines::account-notes-accordion:selected\n",
+      "- account-lines::configurable-table:render\n",
+      "- account-lines::custom-accordionundefined-1-accordion:selected\n",
+      "- account-lines::custom-accordionundefined-3-accordion:selected\n",
+      "- account-lines::duplicate-policy-modal:duplicate-rating\n",
+      "- account-lines::layout:render\n",
+      "- account-lines::loss-analysis-accordion:selected\n",
+      "- account-lines::loss-ratios-accordion:selected\n",
+      "- account-lines::quote-packages:submit-click\n",
+      "- account-lines::templeton-docs:create-document-click\n",
+      "- account-lines::widget:render\n",
+      "- account-page-view\n",
+      "- account-policy-rating:::change-rating-click\n",
+      "- account-policy-rating:::view\n",
+      "- account-policy-rating::configurable-table:render\n",
+      "- account-property-rating:::change-rating-click\n",
+      "- account-property-rating::duplicate-policy-modal:duplicate-rating\n",
+      "- account-property-rating::more-actions:take-action-click\n",
+      "- account-property-rating:perils::view\n",
+      "- account-property-rating:perils:configurable-table:render\n",
+      "- account-property-rating:perils:layers:add-click\n",
+      "- account-property-rating:perils:layers:delete-click\n",
+      "- account-property-rating:perils:model-request-details:save-click\n",
+      "- account-property-rating:perils:perils-table:add-click\n",
+      "- account-property-rating:perils:perils-table:delete-click\n",
+      "- account-property-rating:perils:perils-table:edit-click\n",
+      "- account-property-rating:pricing-detail::open-ra-file-click\n",
+      "- account-property-rating:pricing-detail::view\n",
+      "- account-property-rating:pricing-detail:configurable-table:render\n",
+      "- account-property-rating:summary::view\n",
+      "- account-workers-comp-rating:::view\n",
+      "- account:::view\n",
+      "- account::more-actions:take-action-click\n",
+      "- accounts-overview-page-view\n",
+      "- action-center:::close-click\n",
+      "- action-center:::submit-click\n",
+      "- action-center:::view\n",
+      "- action-center:action-details::view\n",
+      "- action-center:action-details:response-form:submit-click\n",
+      "- action-center:create-action-form::submit-click\n",
+      "- action-center:create-action-form::view\n",
+      "- agency-account:::view\n",
+      "- agency-dashboard:::view\n",
+      "- all-accounts:::view\n",
+      "- all-accounts::accounts-table:account-click\n",
+      "- all-accounts:new-business::view\n",
+      "- all-accounts:new-business:accounts-table:account-click\n",
+      "- all-accounts:new-business:layout:render\n",
+      "- all-accounts:renewals::view\n",
+      "- application-window-opened\n",
+      "- dashboard:my-book::action-click\n",
+      "- dashboard:my-book::view\n",
+      "- dashboard:my-book:action-items-card:all-actions-click\n",
+      "- dashboard:my-book:all-policies-table:policy-click\n",
+      "- dashboard:my-book:configurable-table:render\n",
+      "- dashboard:my-book:layout:render\n",
+      "- dashboard:my-book:recent-actions-table:account-click\n",
+      "- dashboard:my-book:recent-actions-table:action-click\n",
+      "- dashboard:my-book:upcoming-policies-table:account-click\n",
+      "- dashboard:my-book:upcoming-policies-table:policy-click\n",
+      "- dashboard:my-book:widget:render\n",
+      "- dashboard:portfolio-insights::view\n",
+      "- dashboard:portfolio-insights:layout:render\n",
+      "- dashboard:portfolio-insights:widget:render\n",
+      "- documents-and-compliance-accordion-selected\n",
+      "- global-sidebar-item-click\n",
+      "- goals-and-rules:edit-rule::advanced-filters-applied\n",
+      "- goals-and-rules:edit-rule::close-click\n",
+      "- goals-and-rules:goals::view\n",
+      "- goals-and-rules:goals:configurable-table:render\n",
+      "- goals-and-rules:rule-definition:configurable-table:render\n",
+      "- naics-codes-accordion-selected\n",
+      "- session_end\n",
+      "- session_start\n",
+      "- submissions:all-exposures::view\n",
+      "- submissions:all-exposures:configurable-table:render\n",
+      "- submissions:all-policy::view\n",
+      "- submissions:all-policy:configurable-table:render\n",
+      "- submissions:all-renewal::view\n",
+      "- submissions:all-renewal:configurable-table:render\n",
+      "- submissions:exposures-create::submit-click\n",
+      "- submissions:exposures-create::view\n",
+      "- submissions:policy-create::submit-click\n",
+      "- submissions:policy-create::view\n",
+      "- submissions:policy-create:configurable-table:render\n",
+      "- submissions:policy-definition::submit-click\n",
+      "- submissions:policy-definition::view\n",
+      "- submissions:renewal-create::save-click\n",
+      "- submissions:renewal-create::view\n",
+      "- submissions:triaged_submissions-definition::view\n",
+      "- triaged-submission-list:my-book::view\n",
+      "- triaged-submission-list:my-book:configurable-table:render\n",
+      "- triaged-submission-list:triaged_submissions-definition::view\n",
+      "- triaged-submission-list:triaged_submissions-definition:configurable-table:render\n",
+      "- triaged-submission:triaged_submissions-definition::view\n",
+      "- triaged-submission:triaged_submissions-definition:layout:render\n",
+      "- triaged-submission:triaged_submissions-definition:widget:render\n",
+      "- udoc-accordion-selected\n",
+      "- unified-dashboard-page-view\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "from supabase import create_client, Client\n",
+    "import time  # Add this import\n",
+    "\n",
+    "# Initialize Supabase client\n",
+    "os.environ.clear()\n",
+    "load_dotenv(override=True)\n",
+    "supabase: Client = create_client(\n",
+    "    supabase_url=os.getenv(\"SUPABASE_URL\"),\n",
+    "    supabase_key=os.getenv(\"SUPABASE_KEY\")\n",
+    ")\n",
+    "\n",
+    "try:\n",
+    "    # Use smaller chunks and add delay\n",
+    "    page_size = 100000\n",
+    "    offset = 0\n",
+    "    unique_event_types = set()\n",
+    "    \n",
+    "    while True:\n",
+    "        response = supabase.table('v2_federato_amplitude_data')\\\n",
+    "            .select('event_type')\\\n",
+    "            .range(offset, offset + page_size - 1)\\\n",
+    "            .execute()\n",
+    "        \n",
+    "        if not response.data:\n",
+    "            break\n",
+    "            \n",
+    "        # Add event types from this chunk to our set\n",
+    "        unique_event_types.update(row['event_type'] for row in response.data)\n",
+    "        offset += page_size\n",
+    "        \n",
+    "        print(f\"Processed {offset:,} rows...\")\n",
+    "        \n",
+    "        # Add a small delay between requests\n",
+    "        time.sleep(0.1)  # 100ms delay between chunks\n",
+    "    \n",
+    "    print(f\"\\nTotal unique event types: {len(unique_event_types)}\")\n",
+    "    print(\"\\nUnique event types:\")\n",
+    "    for event_type in sorted(unique_event_types):\n",
+    "        print(f\"- {event_type}\")\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"Error occurred: {e}\")\n",
+    "    \n",
+    "    # If we got some data before the error, show what we have\n",
+    "    if unique_event_types:\n",
+    "        print(f\"\\nPartial results before error:\")\n",
+    "        print(f\"Processed at least {offset:,} rows\")\n",
+    "        print(f\"Found {len(unique_event_types)} unique event types so far:\")\n",
+    "        for event_type in sorted(unique_event_types):\n",
+    "            print(f\"- {event_type}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "APIError",
+     "evalue": "{'code': '42P01', 'details': None, 'hint': None, 'message': 'relation \"public.v2_federato_amplitude_data_chunk_1\" does not exist'}",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAPIError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[26], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m10\u001b[39m):\n\u001b[1;32m      3\u001b[0m     chunk_table \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mv2_federato_amplitude_data_chunk_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m----> 4\u001b[0m     response \u001b[38;5;241m=\u001b[39m \u001b[43msupabase\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtable\u001b[49m\u001b[43m(\u001b[49m\u001b[43mchunk_table\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mselect\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mid\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcount\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mexact\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mchunk_table\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresponse\u001b[38;5;241m.\u001b[39mcount\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m,\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m rows\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/Projects/CXC2025/.venv/lib/python3.12/site-packages/postgrest/_sync/request_builder.py:78\u001b[0m, in \u001b[0;36mSyncQueryRequestBuilder.execute\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     76\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m APIResponse[_ReturnT]\u001b[38;5;241m.\u001b[39mfrom_http_request_response(r)\n\u001b[1;32m     77\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 78\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m APIError(r\u001b[38;5;241m.\u001b[39mjson())\n\u001b[1;32m     79\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m ValidationError \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m     80\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m APIError(r\u001b[38;5;241m.\u001b[39mjson()) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01me\u001b[39;00m\n",
+      "\u001b[0;31mAPIError\u001b[0m: {'code': '42P01', 'details': None, 'hint': None, 'message': 'relation \"public.v2_federato_amplitude_data_chunk_1\" does not exist'}"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "from supabase import create_client, Client\n",
+    "import time  # Add this import\n",
+    "\n",
+    "# Initialize Supabase client\n",
+    "os.environ.clear()\n",
+    "load_dotenv(override=True)\n",
+    "supabase: Client = create_client(\n",
+    "    supabase_url=os.getenv(\"SUPABASE_URL\"),\n",
+    "    supabase_key=os.getenv(\"SUPABASE_KEY\")\n",
+    ")\n",
+    "\n",
+    "# Verify chunk sizes\n",
+    "for i in range(1, 10):\n",
+    "    chunk_table = f'v2_federato_amplitude_data_chunk_{i}'\n",
+    "    response = supabase.table(chunk_table).select('id', count='exact').execute()\n",
+    "    print(f\"{chunk_table}: {response.count:,} rows\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error occurred: {'code': '57014', 'details': None, 'hint': None, 'message': 'canceling statement due to statement timeout'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "from supabase import create_client, Client\n",
+    "import time\n",
+    "\n",
+    "# Initialize Supabase client\n",
+    "os.environ.clear()\n",
+    "load_dotenv(override=True)\n",
+    "supabase: Client = create_client(\n",
+    "    supabase_url=os.getenv(\"SUPABASE_URL\"),\n",
+    "    supabase_key=os.getenv(\"SUPABASE_KEY\")\n",
+    ")\n",
+    "\n",
+    "try:\n",
+    "    # First, get total count\n",
+    "    count_response = supabase.table('v2_federato_amplitude_data')\\\n",
+    "        .select('id', count='exact')\\\n",
+    "        .execute()\n",
+    "    total_rows = count_response.count\n",
+    "    print(f\"Total rows: {total_rows:,}\")\n",
+    "    \n",
+    "    # Define smaller chunk size\n",
+    "    chunk_size = 50000  # Reduced chunk size\n",
+    "    num_chunks = (total_rows + chunk_size - 1) // chunk_size\n",
+    "    \n",
+    "    print(f\"Will create {num_chunks} chunks of {chunk_size:,} rows each\")\n",
+    "    \n",
+    "    # Process in chunks\n",
+    "    for chunk_num in range(num_chunks):\n",
+    "        start_offset = chunk_num * chunk_size\n",
+    "        chunk_table = f'v2_federato_amplitude_data_chunk_{chunk_num + 1}'\n",
+    "        print(f\"\\nProcessing {chunk_table}...\")\n",
+    "        \n",
+    "        # First create the table with the same structure\n",
+    "        create_table_query = f\"\"\"\n",
+    "        CREATE TABLE IF NOT EXISTS {chunk_table} \n",
+    "        (LIKE v2_federato_amplitude_data INCLUDING ALL)\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        # Then insert data in smaller batches\n",
+    "        insert_query = f\"\"\"\n",
+    "        INSERT INTO {chunk_table}\n",
+    "        SELECT * FROM v2_federato_amplitude_data \n",
+    "        ORDER BY id\n",
+    "        LIMIT {chunk_size} \n",
+    "        OFFSET {start_offset}\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        try:\n",
+    "            # Create table\n",
+    "            supabase.rpc('execute_sql', {'query': create_table_query}).execute()\n",
+    "            print(f\"Created table structure for chunk {chunk_num + 1}\")\n",
+    "            \n",
+    "            # Insert data\n",
+    "            supabase.rpc('execute_sql', {'query': insert_query}).execute()\n",
+    "            print(f\"Inserted data into chunk {chunk_num + 1}\")\n",
+    "            \n",
+    "            # Verify chunk size\n",
+    "            count = supabase.table(chunk_table).select('id', count='exact').execute()\n",
+    "            print(f\"Chunk {chunk_num + 1} size: {count.count:,} rows\")\n",
+    "            \n",
+    "        except Exception as chunk_error:\n",
+    "            print(f\"Error processing chunk {chunk_num + 1}: {chunk_error}\")\n",
+    "            continue\n",
+    "        \n",
+    "        # Add a longer delay between chunks\n",
+    "        time.sleep(2)\n",
+    "    \n",
+    "    print(\"\\nChunk creation complete!\")\n",
+    "    \n",
+    "    # Final verification\n",
+    "    print(\"\\nVerifying all chunk sizes:\")\n",
+    "    total_chunk_rows = 0\n",
+    "    for i in range(1, num_chunks + 1):\n",
+    "        chunk_table = f'v2_federato_amplitude_data_chunk_{i}'\n",
+    "        try:\n",
+    "            response = supabase.table(chunk_table).select('id', count='exact').execute()\n",
+    "            chunk_count = response.count\n",
+    "            total_chunk_rows += chunk_count\n",
+    "            print(f\"{chunk_table}: {chunk_count:,} rows\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error verifying {chunk_table}: {e}\")\n",
+    "    \n",
+    "    print(f\"\\nOriginal table: {total_rows:,} rows\")\n",
+    "    print(f\"Sum of all chunks: {total_chunk_rows:,} rows\")\n",
+    "    print(f\"Difference: {abs(total_rows - total_chunk_rows):,} rows\")\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"Error occurred: {e}\")\n"
+   ]
   }
  ],
  "metadata": {
