--- a/notebooks/calculations.ipynb
+++ b/notebooks/calculations.ipynb
@@ -472,7 +472,110 @@
       "Updated retention events for user 378\n",
       "Updated retention events for user 379\n",
       "Updated retention events for user 380\n",
-      "Updated retention events for user 381\n"
+      "Updated retention events for user 381\n",
+      "Updated retention events for user 382\n",
+      "Updated retention events for user 383\n",
+      "Updated retention events for user 384\n",
+      "Updated retention events for user 385\n",
+      "Updated retention events for user 386\n",
+      "Updated retention events for user 387\n",
+      "Updated retention events for user 388\n",
+      "Updated retention events for user 389\n",
+      "Updated retention events for user 390\n",
+      "Updated retention events for user 391\n",
+      "Updated retention events for user 392\n",
+      "Updated retention events for user 393\n",
+      "Updated retention events for user 394\n",
+      "Updated retention events for user 395\n",
+      "Updated retention events for user 396\n",
+      "Updated retention events for user 397\n",
+      "Updated retention events for user 398\n",
+      "Updated retention events for user 399\n",
+      "Updated retention events for user 400\n",
+      "Updated retention events for user 401\n",
+      "Updated retention events for user 402\n",
+      "Updated retention events for user 403\n",
+      "Updated retention events for user 404\n",
+      "Updated retention events for user 405\n",
+      "Updated retention events for user 406\n",
+      "Updated retention events for user 407\n",
+      "Updated retention events for user 408\n",
+      "Updated retention events for user 409\n",
+      "Updated retention events for user 410\n",
+      "Updated retention events for user 411\n",
+      "Updated retention events for user 412\n",
+      "Updated retention events for user 413\n",
+      "Updated retention events for user 414\n",
+      "Updated retention events for user 415\n",
+      "Updated retention events for user 416\n",
+      "Updated retention events for user 417\n",
+      "Updated retention events for user 418\n",
+      "Updated retention events for user 419\n",
+      "Updated retention events for user 420\n",
+      "Updated retention events for user 421\n",
+      "Updated retention events for user 422\n",
+      "Updated retention events for user 423\n",
+      "Updated retention events for user 424\n",
+      "Updated retention events for user 425\n",
+      "Updated retention events for user 426\n",
+      "Updated retention events for user 427\n",
+      "Updated retention events for user 428\n",
+      "Updated retention events for user 429\n",
+      "Updated retention events for user 430\n",
+      "Updated retention events for user 431\n",
+      "Updated retention events for user 432\n",
+      "Updated retention events for user 433\n",
+      "Updated retention events for user 434\n",
+      "Updated retention events for user 435\n",
+      "Updated retention events for user 436\n",
+      "Updated retention events for user 437\n",
+      "Updated retention events for user 438\n",
+      "Updated retention events for user 439\n",
+      "Updated retention events for user 440\n",
+      "Updated retention events for user 441\n",
+      "Updated retention events for user 442\n",
+      "Updated retention events for user 443\n",
+      "Updated retention events for user 444\n",
+      "Updated retention events for user 445\n",
+      "Updated retention events for user 446\n",
+      "Updated retention events for user 447\n",
+      "Updated retention events for user 448\n",
+      "Updated retention events for user 449\n",
+      "Updated retention events for user 450\n",
+      "Updated retention events for user 451\n",
+      "Updated retention events for user 452\n",
+      "Updated retention events for user 453\n",
+      "Updated retention events for user 454\n",
+      "Updated retention events for user 455\n",
+      "Updated retention events for user 456\n",
+      "Updated retention events for user 457\n",
+      "Updated retention events for user 458\n",
+      "Updated retention events for user 459\n",
+      "Updated retention events for user 460\n",
+      "Updated retention events for user 461\n",
+      "Updated retention events for user 462\n",
+      "Updated retention events for user 463\n",
+      "Updated retention events for user 464\n",
+      "Updated retention events for user 465\n",
+      "Updated retention events for user 466\n",
+      "Updated retention events for user 467\n",
+      "Updated retention events for user 468\n",
+      "Updated retention events for user 469\n",
+      "Updated retention events for user 470\n",
+      "Updated retention events for user 471\n",
+      "Updated retention events for user 472\n",
+      "Updated retention events for user 473\n",
+      "Updated retention events for user 474\n",
+      "Updated retention events for user 475\n",
+      "Updated retention events for user 476\n",
+      "Updated retention events for user 477\n",
+      "Updated retention events for user 478\n",
+      "Updated retention events for user 479\n",
+      "Updated retention events for user 480\n",
+      "Updated retention events for user 481\n",
+      "Updated retention events for user 482\n",
+      "Updated retention events for user 483\n",
+      "Updated retention events for user 484\n"
      ]
     }
    ],
