--- a/notebooks/calculations_churn.ipynb
+++ b/notebooks/calculations_churn.ipynb
@@ -100,7 +100,62 @@
       "Updated churn events for user 69\n",
       "Updated churn events for user 70\n",
       "Updated churn events for user 71\n",
-      "Updated churn events for user 72\n"
+      "Updated churn events for user 72\n",
+      "Updated churn events for user 73\n",
+      "Updated churn events for user 74\n",
+      "Updated churn events for user 75\n",
+      "Updated churn events for user 76\n",
+      "Updated churn events for user 77\n",
+      "Updated churn events for user 78\n",
+      "Updated churn events for user 79\n",
+      "Updated churn events for user 80\n",
+      "Updated churn events for user 81\n",
+      "Updated churn events for user 82\n",
+      "Updated churn events for user 83\n",
+      "Updated churn events for user 84\n",
+      "Updated churn events for user 85\n",
+      "Updated churn events for user 86\n",
+      "Updated churn events for user 87\n",
+      "Updated churn events for user 88\n",
+      "Updated churn events for user 89\n",
+      "Updated churn events for user 90\n",
+      "Updated churn events for user 91\n",
+      "Updated churn events for user 92\n",
+      "Updated churn events for user 93\n",
+      "Updated churn events for user 94\n",
+      "Updated churn events for user 95\n",
+      "Updated churn events for user 96\n",
+      "Updated churn events for user 97\n",
+      "Updated churn events for user 98\n",
+      "Updated churn events for user 99\n",
+      "Updated churn events for user 100\n",
+      "Updated churn events for user 101\n",
+      "Updated churn events for user 102\n",
+      "Updated churn events for user 103\n",
+      "Updated churn events for user 104\n",
+      "Updated churn events for user 105\n",
+      "Updated churn events for user 106\n",
+      "Updated churn events for user 107\n",
+      "Updated churn events for user 108\n",
+      "Updated churn events for user 109\n",
+      "Updated churn events for user 110\n",
+      "Updated churn events for user 111\n",
+      "Updated churn events for user 112\n",
+      "Updated churn events for user 113\n",
+      "Updated churn events for user 114\n",
+      "Updated churn events for user 115\n",
+      "Updated churn events for user 116\n",
+      "Updated churn events for user 117\n",
+      "Updated churn events for user 118\n",
+      "Updated churn events for user 119\n",
+      "Updated churn events for user 120\n",
+      "Updated churn events for user 121\n",
+      "Updated churn events for user 122\n",
+      "Updated churn events for user 123\n",
+      "Updated churn events for user 124\n",
+      "Updated churn events for user 125\n",
+      "Updated churn events for user 126\n",
+      "Updated churn events for user 127\n"
      ]
     }
    ],
