--- a/notebooks/calculations_churn.ipynb
+++ b/notebooks/calculations_churn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17334,6 +17334,52 @@
     "\n",
     "# Execute the update\n",
     "update_all_users_terminal_events()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 15483 rows with empty top_churn_events\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Count how many rows have empty top_churn_events\n",
+    "count_response = supabase.table(\"user_table\")\\\n",
+    "    .select(\"*\", count=\"exact\")\\\n",
+    "    .or_(\"top_churn_events.is.null,top_churn_events.eq.[]\")\\\n",
+    "    .execute()\n",
+    "\n",
+    "print(f\"Found {count_response.count} rows with empty top_churn_events\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deleted 15483 rows\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Delete them\n",
+    "delete_response = supabase.table(\"user_table\")\\\n",
+    "    .delete()\\\n",
+    "    .or_(\"top_churn_events.is.null,top_churn_events.eq.[]\")\\\n",
+    "    .execute()\n",
+    "\n",
+    "print(f\"Deleted {len(delete_response.data)} rows\")"
    ]
   }
  ],
