--- a/notebooks/calculations_churn.ipynb
+++ b/notebooks/calculations_churn.ipynb
@@ -3433,7 +3433,32 @@
       "Updated terminal events for user 3393\n",
       "Updated terminal events for user 3394\n",
       "Updated terminal events for user 3395\n",
-      "Updated terminal events for user 3396\n"
+      "Updated terminal events for user 3396\n",
+      "Error calculating terminal events for user 3397: {'code': '57014', 'details': None, 'hint': None, 'message': 'canceling statement due to statement timeout'}\n",
+      "Updated terminal events for user 3397\n",
+      "Updated terminal events for user 3398\n",
+      "Updated terminal events for user 3399\n",
+      "Updated terminal events for user 3400\n",
+      "Updated terminal events for user 3401\n",
+      "Updated terminal events for user 3402\n",
+      "Updated terminal events for user 3403\n",
+      "Updated terminal events for user 3404\n",
+      "Updated terminal events for user 3405\n",
+      "Updated terminal events for user 3406\n",
+      "Updated terminal events for user 3407\n",
+      "Updated terminal events for user 3408\n",
+      "Updated terminal events for user 3409\n",
+      "Updated terminal events for user 3410\n",
+      "Updated terminal events for user 3411\n",
+      "Updated terminal events for user 3412\n",
+      "Updated terminal events for user 3413\n",
+      "Updated terminal events for user 3414\n",
+      "Updated terminal events for user 3415\n",
+      "Updated terminal events for user 3416\n",
+      "Updated terminal events for user 3417\n",
+      "Updated terminal events for user 3418\n",
+      "Updated terminal events for user 3419\n",
+      "Updated terminal events for user 3420\n"
      ]
     }
    ],
