--- a/notebooks/calculations_top_events.ipynb
+++ b/notebooks/calculations_top_events.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4244,16 +4244,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Top 5 Most Common Events Overall:\n",
+      "--------------------------------\n",
+      "Event: application-window-opened\n",
+      "Number of Users: 1106\n",
+      "Percentage of Users: 66.0%\n",
+      "--------------------------------\n",
+      "Event: account-lines:::view\n",
+      "Number of Users: 615\n",
+      "Percentage of Users: 36.7%\n",
+      "--------------------------------\n",
+      "Event: account:::view\n",
+      "Number of Users: 530\n",
+      "Percentage of Users: 31.6%\n",
+      "--------------------------------\n",
+      "Event: dashboard:my-book::view\n",
+      "Number of Users: 471\n",
+      "Percentage of Users: 28.1%\n",
+      "--------------------------------\n",
+      "Event: account-lines::widget:render\n",
+      "Number of Users: 404\n",
+      "Percentage of Users: 24.1%\n",
+      "--------------------------------\n"
+     ]
+    }
+   ],
    "source": [
+    "# Query to get top 5 most common events across all users\n",
+    "query_response = supabase.table(\"user_table_refined\").select(\"top_events\").execute()\n",
     "\n",
-    "    \n",
-    "    \n",
-    "    \n",
+    "# Flatten all events and count occurrences\n",
+    "event_counts = {}\n",
+    "for user in query_response.data:\n",
+    "    if user[\"top_events\"]:  # Check if not None or empty\n",
+    "        # Count each unique event only once per user\n",
+    "        user_events = set(event_data[\"event\"] for event_data in user[\"top_events\"])\n",
+    "        for event in user_events:\n",
+    "            event_counts[event] = event_counts.get(event, 0) + 1\n",
     "\n",
-    "\n"
+    "# Get top 5 most common events\n",
+    "top_5_events = sorted(\n",
+    "    event_counts.items(),\n",
+    "    key=lambda x: x[1],  # Sort by count\n",
+    "    reverse=True\n",
+    ")[:5]\n",
+    "\n",
+    "# Calculate percentage of users for each event\n",
+    "total_users = len([u for u in query_response.data if u[\"top_events\"]])\n",
+    "\n",
+    "print(\"\\nTop 5 Most Common Events Overall:\")\n",
+    "print(\"--------------------------------\")\n",
+    "for event, count in top_5_events:\n",
+    "    percentage = (count / total_users) * 100 if total_users > 0 else 0\n",
+    "    print(f\"Event: {event}\")\n",
+    "    print(f\"Number of Users: {count}\")\n",
+    "    print(f\"Percentage of Users: {percentage:.1f}%\")\n",
+    "    print(\"--------------------------------\")\n"
    ]
   }
  ],
